@startuml
title Create Command Class View
hide circles

class Parser {
  + parse(input: String): ParsedCommand
}

class ParsedCommand {
  - type: CommandType
  - name: String
  + type(): CommandType
  + name(): String
}

class CG2StocksTracker {
  - parser: Parser
  - portfolioBook: PortfolioBook
  - storage: Storage
  - ui: Ui
  + handleCreate(command: ParsedCommand)
}

class PortfolioBook {
  - portfolios: Map<String, Portfolio>
  - activePortfolioName: String
  + createPortfolio(name: String): void
  + hasActivePortfolio(): boolean
  + getActivePortfolioName(): String
}

class Portfolio {
  - name: String
}

class Storage {
  - storageFilePath: Path
  + save(portfolioBook: PortfolioBook): void
}

class Ui {
  + showMessage(message: String): void
}

Parser ..> ParsedCommand : constructs
CG2StocksTracker ..> Parser : parses command text
CG2StocksTracker ..> PortfolioBook : coordinates portfolio lifecycle
PortfolioBook o-- "0..*" Portfolio : stores
CG2StocksTracker ..> Storage : persists state
CG2StocksTracker ..> Ui : reports outcome
@enduml
